--- a/menu/Makefile
+++ b/menu/Makefile
@@ -1,4 +1,4 @@
 menu:
-	gcc menu.c -o menu0 && g++ menu.cpp -o menu1 && g++  -std=c++17 menu2.cpp -o menu2
+	gcc menu.c -o menu0 && g++ -std=c++17 menu2.cpp -o menu2 && g++ -std=c++17 new_menu.cpp -o new_menu
 clean:
-	rm menu0 menu1 menu2
+	rm menu0 menu2 new_menu
